--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-FIRE BEATS
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2H7fNwaZNFhglg20iylWzE?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
-
-
-
-
-
-
-
-
-
-
-
-
-<iframe style="border-radius:12px" src="https://soaper.tv" width="100%" height="3052" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
+<div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.25%;"><iframe src="https://grabify.link/757KFE" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen scrolling="no" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;"></iframe></div>
